# LFP_1S2026_-202405397

./: archivo Github
Proyect 1/: CHECKLIST_PROYECTO_MEDLANG.md  CMakeLists.txt  Checklist.md  README.md  reporte_lexico.html
Proyect 1/build_alt/: CMakeCache.txt  Makefile  cmake_install.cmake
Proyect 1/build_alt/.qt/: QtDeploySupport.cmake
Proyect 1/build_alt/medlang_cli_autogen/: deps
Proyect 1/build_alt/medlang_core_autogen/: deps
Proyect 1/build_alt/medlang_gui_autogen/: deps
Proyect 1/build_alt/medlang_gui_autogen/K2SF5ZL7FF/: qrc_medlang.cpp
Proyect 1/docs/: manual_tecnico.md  manual_usuario.md
Proyect 1/output/: agenda_citas_conflictos.html  carga_medicos_especialidad.html  estadistico_general_hospital.html  historial_pacientes.html  hospital.dot  indice_reportes.html  reporte_lexico.html
Proyect 1/src/: Lexer.cpp  Lexer.h  Token.h  main.cpp  prueba.med
Proyect 1/src/app/: MedLangService.cpp  MedLangService.h  SemanticAnalyzer.h  main.cpp
Proyect 1/src/core/lexer/: Lexer.cpp
Proyect 1/src/core/parser/: Parser.cpp
Proyect 1/src/core/report/: Appointments.cpp  Appointments.h  Doctors.cpp  Generator.cpp  Generator.h  Graphviz.cpp  Graphviz.h  Hospital.cpp  Hospital.h  Html.cpp  Html.h  Patients.cpp
Proyect 1/src/core/semantic/: SemanticAnalyzer.h
Proyect 1/src/gui/: MainWindow.cpp  MainWindow.h
Proyect 1/src/lexer/: Lexer.cpp  LexerValidators.cpp  Token.h
Proyect 1/src/model/: HospitalModel.h
Proyect 1/src/parser/: Parser.cpp  Parser.h
Proyect 1/src/reporting/: LexicalReport.h
Proyect 1/src/semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
Proyect 1/test/: MedLang.med  hospital_errores_01.med  hospital_errores_02.med  hospital_valido_02.med  hospital_valido_03.med  prueba_nobom.med  salidas_esperadas.md  semantic_conflicts.med  semantic_conflicts_nobom.med  test_avanzado.med
Proyect 1/tools/: Ejecutador.ps1  medlang.ps1
Proyect 2/: CMakeLists.txt  COMPILAR.ps1  COMPILAR_DEBUG.ps1  DEPURADOR.md  DIAGNOSTICO.ps1  EJECUTAR.ps1  EJECUTAR_CLI.ps1  METODOLOGIA_CHECKLIST.md  build.bat  launcher.ps1
Proyect 2/docs/: CheckList.md  GRAMMAR_REFERENCE.md
Proyect 2/output/: ast.dot  errors.html  indice_reportes.html  kanban.html  reporte_carga.html  reporte_errores.html  reporte_estadisticas.html  reporte_kanban.html  reporte_tokens.html  stats.html  tokens.html  workload.html
Proyect 2/src/app/: MedLangService.cpp  MedLangService.h  main.cpp
Proyect 2/src/core/lexer/: Lexer.h  LexerCatalog.cpp  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Token.h
Proyect 2/src/core/model/: HospitalModel.h
Proyect 2/src/core/parser/: Parser.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h
Proyect 2/src/core/report/: Appointments.h  Doctors.h  Hospital.cpp  Kanban.cpp  Kanban.h  LexicalReport.cpp  LexicalReport.h  Patients.h  Report.cpp  Report.h  Responsable.cpp  Responsable.h  Workload.cpp  Workload.h
Proyect 2/src/core/semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
Proyect 2/src/core/semantic copy/: SemanticAnalyzer.cpp
Proyect 2/src/gui/: MainWindow.cpp  main.cpp  qt_test_main.cpp
Proyect 2/src/gui/resources/: medlang.qrc
Proyect 2/test/: test06_formato_usuario.task
Proyect 2/tools/: lexparse_cli.cpp
